# Influence-Based-Detection-of-ML-Attacks

./: .gitignore  InfluenceAnalysis.py  Makefile  README.md  adversarials_influence.py  baseline_comparison.py  detect_adversarials.py  pipeline_runner.py  poison_evol_signal.py  poison_influence.py  poison_newsignal.py  poison_pipeline_runner.py  poison_signals.py  pyproject.toml  requirements.txt  seed_averages.py  test_adversarials_influence.py
analysis/: plotting.py
attack_generation/: utils.py
attack_generation/adversarials/: bound_attack.py  cw.py  fgsm.py  run_attacks.py
attack_generation/poisons/: run_attacks.py  run_attacks2.py
baselines/adversarials/: nnif.py
baselines/adversarials/nnif/: nnif.py
configs/resnet/: resnet_cifar10.json  resnet_fmnist.json  resnet_mnist.json  tracin_resnet.json
data/: load_prepare.py  preparation.py
ibda/influence_functions/: base_influence.py  tracin_torch.py
ibda/influence_functions/dynamic/: tracin_torch.py
ibda/models/: __init__.py  base.py  model_dispatcher.py  train_loop.py  utils.py
ibda/models/foundational/: resnet20.py
ibda/signals/: __init__.py  signals_fast.py
ibda/utils/: __init__.py  config_manager.py  writers.py
poison_attacks/: resnet_9_model.py  training.py  utils.py
signal_development/: adversarial_signals.py
