[tool.poetry]
name = "ibda"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
captum = "^0.7.0"
torchvision = "^0.17.1"
scikit-learn = "^1.4.1.post1"
pkbar = "^0.5"
black = "^24.2.0"
isort = "^5.13.2"
adversarial-robustness-toolbox = "^1.17.1"
pandas = "^2.2.1"
pydvl = {extras = ["influence", "memcached"], version = "^0.8.1"}
multiprocess = "^0.70.16"


[tool.poetry.group.attacks.dependencies]
adversarial-robustness-toolbox = "^1.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
